# netology

./: .gitignore  .gitmodules  README.md
Qt/lesson_3/task_1/: CMakeLists.txt  connect_db.cpp  connect_db.h  connect_db.ui  dialogabout.cpp  dialogabout.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/lesson_4/task_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/lesson_5/task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  watch.cpp  watch.h
Qt/lesson_6/task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Qt/lesson_7/task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cppl/fix_error/: CMakeLists.txt
cppl/ini_parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  Parser.tpp  config.ini  main.cpp
cppl/lesson_1/task_1/: main.cpp
cppl/lesson_2/task_1/: CMakeLists.txt  SmartArray.cpp  SmartArray.hpp  main.cpp
cppl/lesson_2/task_2/: SmartArray.cpp  SmartArray.hpp  main.cpp
cppl/lesson_3/task_1/: CMakeLists.txt  List.cpp  List.hpp  test_main.cpp
cppl/lesson_3/task_2/: CMakeLists.txt  List.cpp  List.hpp  test_main.cpp
cppl/lesson_4/task_1/: main.cpp
cppl/lesson_4/task_2/: main.cpp
cppl/lesson_4/task_3/: CMakeLists.txt  main.cpp
cppl/lesson_5/task_1/: main.cpp
cppl/lesson_5/task_2/: CMakeLists.txt  main.cpp
cppl/lesson_5/task_3/: CMakeLists.txt  main.cpp
cppl/lesson_6/task_1/: main.cpp
cppl/lesson_6/task_2/: main.cpp
cppl/lesson_7/task_1/: main.cpp
cppl/lesson_7/task_2/: main.cpp
cppl/lesson_7/task_3/: UniquePtr.hpp  UniquePtr.tpp  main.cpp
cppl/lesson_8/task_1/: CMakeLists.txt  main.cpp
cppl/lesson_8/task_2/: BigInteger.cpp  BigInteger.hpp  CMakeLists.txt  main.cpp
cppm/fantasy_race/: CMakeLists.txt  UserInterface.cpp
cppm/fantasy_race/RaceDLL/: ExportImport.h  GameManager.h
cppm/lesson_11/task_1/: task_1.sln
cppm/lesson_11/task_3/: Leaver.cpp  main.cpp
cppm/lesson_11/task_5/: CMakeLists.txt  main.cpp
cppm/lesson_11/task_5/figures/: EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Quadrangle.h  Rectangle.h  RightAngledTriangle.h  Square.h  Triangle.h
cppm/lesson_2/task_3/: main.cpp
cppm/lesson_3/task_2/: main.cpp
cppm/lesson_5/task_2/: main.cpp
cppm/lesson_5/task_3/: main.cpp
cppm/lesson_6/task_1/: CMakeLists.txt  maths.h
cppm/lesson_6/task_2/: CMakeLists.txt  main.cpp
cppm/lesson_7/task_2/: main.cpp
cppm/lesson_8/task_2/: main.cpp
cppm/lesson_9/task_1/: CMakeLists.txt
fantasy_race/: CMakeLists.txt  GameManager.cpp  GameManager.h  RaceManager.cpp  RaceManager.h  UserInterface.cpp  UserInterface.h  main.cpp
fantasy_race/RaceDLL/: AirEntity.cpp  AirEntity.h  BootsTerrain.h  Camel.cpp  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  EntitiesList.h  EntitysList.h  FastCamel.cpp  GameManager.cpp  GameManager.h  GroundEntity.cpp  GroundEntity.h  MagicCarpet.cpp  MagicCarpet.h  Track.cpp  Track.h
fantasy_race/RaceDLL/Core/: ParticipantRegistry.cpp  ParticipantRegistry.h  RaceCalculation.cpp  RaceCalculation.h
fantasy_race/RaceDLL/Entities/: EntitiesList.h  Entity.cpp  Entity.h  Track.cpp  Track.h
fantasy_race/RaceDLL/Entities/AirEntities/: AirEntity.cpp  AirEntity.h  Broomstick.cpp  Broomstick.h  Eagle.cpp  Eagle.h  MagicCarpet.cpp  MagicCarpet.h
fantasy_race/RaceDLL/Entities/GroundEntities/: BootsTerrain.cpp  BootsTerrain.h  Camel.cpp  Camel.h  Centaur.h  FastCamel.h  GroundEntity.cpp  GroundEntity.h
fantasy_race/RaceDLL/Text/: Menu.cpp  Menu.h
lesson_1/task_1/task_1_meeting_with_VS2022/: task_1_meeting_with_VS2022.sln  task_1_meeting_with_VS2022.vcxproj
lesson_10/task_1/: CMakeLists.txt  main.cpp
lesson_10/task_2/: CMakeLists.txt
lesson_10/task_2/figures/: EquilateralTriangle.cpp  Figure.h  Parallelogram.h  Quadrangle.cpp  Triangle.h
lesson_11/dynamic_app/: dynamic_app.sln
lesson_11/dynamic_app/dynamic_app/: dynamic_app.vcxproj  main.cpp
lesson_11/dynamic_app/dynamic_lib/: Leaver.h
lesson_11/task_1/: CMakeLists.txt  main.cpp
lesson_11/task_1/lib/: CMakeLists.txt  Greeter.cpp  Greeter.h
lesson_11/task_1/static_app/: static_app.vcxproj
lesson_11/task_1/static_lib/: Greeter.cpp
lesson_11/task_2/: CMakeLists.txt
lesson_11/task_3/: Leaver.h
lesson_11/task_4/: task_4.sln
lesson_11/task_4/dynamic_figure/: dynamic_figure.vcxproj  main.cpp
lesson_11/task_4/figure_lib/: Figure.cpp  Figures.h  Parallelogram.cpp  Parallelogram.h  Rectangle.h  Rhombus.h  Triangle.h  figure_lib.vcxproj.filters
lesson_11/task_5/figures/: Parallelogram.h  Rhombus.cpp  Rhombus.h
lesson_2/task_1/: main.cpp
lesson_2/task_2/: main.cpp
lesson_3/task_1/: main.cpp
lesson_4/task_1/: main.cpp
lesson_4/task_2/: CMakeLists.txt  main.cpp
lesson_5/task_1/: main.cpp
lesson_5/task_2/: main.cpp
lesson_5/task_3/: main.cpp
lesson_6/task_1/: main.cpp  maths.cpp
lesson_6/task_2/: CMakeLists.txt  counter.cpp  counter.h
lesson_6/task_3/: CMakeLists.txt  main.cpp
lesson_6/task_3/figures/: Parallelogram.h  Quadrangle.h  Rectangle.h  RightAngledTriangle.cpp
lesson_7/task_1/: main.cpp
lesson_8/task_1/: main.cpp
lesson_8/task_2/: CMakeLists.txt  Figures.h  main.cpp
lesson_8/task_2/exception/: GeometryError.cpp  GeometryError.h
lesson_8/task_2/figures/: EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightAngledTriangle.cpp  RightAngledTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
lesson_9/task_1/: main.cpp
lesson_9/task_2/: main.cpp
pattern/lesson_1/task_1/: main.cpp  sql_select_query_builder.cpp  sql_select_query_builder.h  task_1.sln  task_1.vcxproj  task_1.vcxproj.filters
pattern/lesson_1/task_2/: main.cpp  sql_select_query_builder.cpp  sql_select_query_builder.h  task_2.sln  (+2 more)
sqlcpp/lesson_5/task_1/: CMakeLists.txt  ControlDB.cpp  ControlDB.hpp  main.cpp
sqlcpp/lesson_5/task_1/DB/: DB.cpp  DB.hpp
thread/thread_safe_queue/: CMakeLists.txt  main.cc
thread/thread_safe_queue/include/utils/: thread_pool.h
thread/thread_safe_queue/src/: main.cc
(+135 files in other folders)
